--- a/jobmon/package.json
+++ b/jobmon/package.json
@@ -8,9 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@types/d3": "^7.1.0",
     "d3": "^7.2.1",
+    "framer-motion": "^4.1.17",
     "next": "12.0.7",
+    "rc-slider": "^9.7.5",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
