--- a/jobmon/package.json
+++ b/jobmon/package.json
@@ -13,12 +13,15 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@types/d3": "^7.1.0",
+    "base64url": "^3.0.1",
     "d3": "^7.2.1",
     "framer-motion": "^4.1.17",
     "next": "12.0.7",
     "rc-slider": "^9.7.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-cookie": "^4.1.1",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
