Fix docker setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,5 +35,5 @@ services:
     ports:
       - ${INFLUXDB_PORT}:8086
     volumes:
-      - ./data:/var/lib/influxdb2
-      - ./config:/etc/influxdb2
+      - ./influxdb/data:/var/lib/influxdb2
+      - ./influxdb/config:/etc/influxdb2
