--- a/.env
+++ b/.env
@@ -7,4 +7,8 @@ INFLUXDB_BUCKET=jobmon
 BACKEND_PORT=3000
 FRONTEND_PORT=80
 INFLUXDB_PORT=8086
+PSQL_PORT=5432
 HOSTNAME=localhost
+
+PSQL_PASSWORD=LzeEbp5KyihKXC7a66UQLVVw
+PSQL_DB=jobmon
