--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     depends_on:
       - backend
       - influxdb
+      - psql
     ports:
       - ${FRONTEND_PORT}:3000
   backend:
@@ -21,6 +22,7 @@ services:
       - ./store:/app/store
     depends_on:
       - influxdb
+      - psql
     ports:
       - ${BACKEND_PORT}:8080
   influxdb:
@@ -37,3 +39,11 @@ services:
     volumes:
       - ./influxdb/data:/var/lib/influxdb2
       - ./influxdb/config:/etc/influxdb2
+  psql:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: ${PSQL_PASSWORD}
+      POSTGRES_DB: ${PSQL_DB}
+    ports:
+      - ${PSQL_PORT}:5432
