--- a/jobmon/package.json
+++ b/jobmon/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@types/d3": "^7.1.0",
+    "@types/humanize-duration": "^3.27.1",
     "base64url": "^3.0.1",
     "d3": "^7.2.1",
     "framer-motion": "^4.1.17",
+    "humanize-duration": "^3.27.1",
     "next": "12.0.7",
     "rc-slider": "^9.7.5",
     "react": "17.0.2",
