--- a/jobmon/package.json
+++ b/jobmon/package.json
@@ -15,6 +15,7 @@
     "@types/d3": "^7.1.0",
     "@types/humanize-duration": "^3.27.1",
     "base64url": "^3.0.1",
+    "chakra-ui-autocomplete": "^1.4.5",
     "d3": "^7.2.1",
     "framer-motion": "^4.1.17",
     "humanize-duration": "^3.27.1",
