--- a/jobmon/package.json
+++ b/jobmon/package.json
@@ -17,6 +17,7 @@
     "base64url": "^3.0.1",
     "chakra-ui-autocomplete": "^1.4.5",
     "d3": "^7.2.1",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "humanize-duration": "^3.27.1",
     "next": "12.0.7",
