--- a/jobmon/package.json
+++ b/jobmon/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "humanize-duration": "^3.27.1",
+    "jszip": "^3.10.1",
     "next": "12.0.7",
     "rc-slider": "^9.7.5",
     "react": "17.0.2",
