--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,10 @@ services:
     build: ./backend
     volumes:
       - type: bind
-        source: ./config.json
+        source: ./backend/config.json
         target: /app/config.json
         read_only: true
-      - ./store:/app/store
+      - ./backend/store:/app/store
     depends_on:
       - influxdb
       - psql
