--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "framer-motion": "^4.1.17",
     "humanize-duration": "^3.27.1",
     "jszip": "^3.10.1",
-    "next": "12.0.7",
+    "next": "^12.1.0",
     "rc-slider": "^9.7.5",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
