--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/d3": "^7.1.0",
     "@types/humanize-duration": "^3.27.1",
     "base64url": "^3.0.1",
+    "chakra-react-select": "^4.4.3",
     "chakra-ui-autocomplete": "^1.4.5",
     "d3": "^7.2.1",
     "formik": "^2.2.9",
