--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,15 @@
   "devDependencies": {
     "@types/node": "16.11.12",
     "@types/react": "^18.0.0",
-    "eslint": "8.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.0.1",
     "eslint-config-next": "12.0.7",
-    "typescript": "^4.7.4"
+    "eslint-config-standard-with-typescript": "^33.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.1",
+    "typescript": "*"
   }
 }
