frontend: Fix .eslinrc.json project path

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -12,7 +12,7 @@
         "ecmaVersion": "latest",
         "sourceType": "module",
         "project": [
-            "frontend/tsconfig.json"
+            "tsconfig.json"
         ]
     },
     "plugins": [
