--- a/.env
+++ b/.env
@@ -1,14 +1,22 @@
+# Docker compose environment file
+
+# InfluxDB config
 INFLUXDB_USER=admin
 INFLUXDB_PASSWORD=p0bVVDg6XmdscnmrPHzecOIvEuuV1eOl
 INFLUXDB_ADMIN_TOKEN=LwgFmAmO8hWQVzpXyFjCezADhQ5nBWuU
 INFLUXDB_ORG=scs
 INFLUXDB_BUCKET=jobmon
-
-BACKEND_PORT=3000
-FRONTEND_PORT=80
 INFLUXDB_PORT=8086
-PSQL_PORT=5432
-HOSTNAME=localhost
 
-PSQL_PASSWORD=LzeEbp5KyihKXC7a66UQLVVw
-PSQL_DB=jobmon
+# Backend config
+BACKEND_URL=https://my-monitor-db.example.org
+BACKEND_WS=wss://my-monitor-db.example.org
+
+# PostgreSQL config
+POSTGRES_PASSWORD=LzeEbp5KyihKXC7a66UQLVVw
+POSTGRES_DB=jobmon
+POSTGRES_PORT=5432
+
+# NGINX config
+NGINX_HTTP_PORT=80
+NGINX_HTTPS_PORT=443
