--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -28,6 +28,10 @@ ENV NEXT_TELEMETRY_DISABLED 1
 
 ARG NEXT_PUBLIC_BACKEND_URL
 ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL}
+
+ARG NEXT_PUBLIC_BACKEND_WS
+ENV NEXT_PUBLIC_BACKEND_WS=${NEXT_PUBLIC_BACKEND_WS}
+
 RUN yarn build
 
 # If using npm comment out above and use below instead
