--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -27,6 +27,16 @@ server {
         proxy_set_header Connection "upgrade";
     }
 
+    location ~ ^/(api|auth)/ {
+        proxy_pass http://backend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
     # Disable the directory listing output
     autoindex off;
 
