--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -12,29 +12,36 @@ server {
     }
 }
 
+upstream frontendServer {
+    server frontend:3000;
+}
+
+upstream backendServer {
+    server backend:8080;
+}
+
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 server {
     listen 443 ssl http2 default_server;
     listen [::]:443 ssl http2 default_server;
     server_name localhost my-monitor-db.example.org;
 
     location / {
-        proxy_pass http://frontend:3000;
+        proxy_pass http://frontendServer;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
     }
 
     location ~ ^/(api|auth)/ {
-        proxy_pass http://backend:8080;
+        proxy_pass http://backendServer;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_buffering off;
+        proxy_buffers 256 4k;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
     }
 
     # Disable the directory listing output
