Use separate images for building and running the backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,18 @@
-# DockerHub Page: https://hub.docker.com/_/golang
-# GitHub Repository: https://github.com/docker-library/golang/
-FROM golang:1.20-alpine
+###
+# Create golang build image
+# * [DockerHub Page](https://hub.docker.com/_/golang)
+# * [GitHub Repository](https://github.com/docker-library/golang/)
+# * [Release History](https://go.dev/doc/devel/release)
+###
+FROM golang:1.20-bullseye AS build
 
 WORKDIR /app
 
-COPY go.mod ./
-COPY go.sum ./
-RUN go mod download
+# Download required go modules
+COPY go.mod go.sum ./
+RUN go mod download && go mod verify
 
+# Add source code to the image
 ADD analysis ./analysis
 ADD auth ./auth
 ADD changepoint ./changepoint
@@ -19,12 +24,25 @@ ADD logging ./logging
 ADD store ./store
 ADD utils ./utils
 ADD router ./router
-
 COPY jobmon.go ./
 
+# Build backend
 RUN --mount=type=cache,target=/root/.cache/go-build \
-    go build -o /docker-jobmon-backend
+    go build -o docker-jobmon-backend
+
+###
+# Create minimal Debian backend image
+# * [DockerHub Page](https://hub.docker.com/_/debian)
+# * [GitHub Repository](https://github.com/docker-library/docs/tree/master/debian)
+# * [Debian Relases](https://wiki.debian.org/DebianReleases)
+###
+FROM debian:bullseye
+
+WORKDIR /app
+
+# Use binary from build image
+COPY --from=build /app/docker-jobmon-backend ./docker-jobmon-backend
 
 EXPOSE 8080
 
-CMD [ "/docker-jobmon-backend" ]
+CMD [ "./docker-jobmon-backend" ]
