--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,14 @@ services:
       - backend
 
   # See: ./backend/Dockerfile
-  # Image based on golang:1.20-alpine
   backend:
     restart: always
-    build: ./backend
+    build:
+      context: ./backend
+      args:
+        # Image based on golang:1.20-bullseye
+        - GOLANG_RELEASE=1.20
+        - DEBIAN_RELEASE=bullseye
     container_name: JobMonBackend
     volumes:
       # Configuration config.json needs to be writable to allow backend to add new metrics
@@ -76,17 +80,17 @@ services:
         target: /etc/nginx/certs.d/fullchain.pem
         uid: "nginx"
         gid: "nginx"
-        mode: 0400
+        mode: 400
       - source: nginxPrivkey
         target: /etc/nginx/certs.d/privkey.pem
         uid: "nginx"
         gid: "nginx"
-        mode: 0400
+        mode: 400
       - source: nginxChain
         target: /etc/nginx/certs.d/chain.pem
         uid: "nginx"
         gid: "nginx"
-        mode: 0400
+        mode: 400
     configs:
       - source: nginxDefaultConfig
         target: /etc/nginx/conf.d/default.conf
