--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 services:
 
   # See: ./frontend/Dockerfile
-  # Image based on node:16-alpine
   frontend:
     restart: always
     build:
       context: ./frontend
       args:
+        # Image based on node:16-alpine
+        - NODE_TAG=16-alpine
         - NEXT_PUBLIC_BACKEND_URL=${BACKEND_URL}
         - NEXT_PUBLIC_BACKEND_WS=${BACKEND_WS}
     container_name: JobMonFrontend
