--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,10 @@
+# Node.js Docker Image
+# * [DockerHub Page](https://hub.docker.com/_/node)
+ARG NODE_TAG=16-alpine
+
 # Taken from https://nextjs.org/docs/deployment
 # Install dependencies only when needed
-FROM node:16-alpine AS deps
+FROM node:${NODE_TAG} AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
@@ -8,15 +12,19 @@ WORKDIR /app
 # Install dependencies based on the preferred package manager
 COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
 RUN \
-    if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
-    elif [ -f package-lock.json ]; then npm ci; \
-    elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i --frozen-lockfile; \
-    else echo "Lockfile not found." && exit 1; \
+    if [ -f yarn.lock ]; then \
+        yarn --frozen-lockfile; \
+    elif [ -f package-lock.json ]; then \
+        npm ci; \
+    elif [ -f pnpm-lock.yaml ]; then \
+        yarn global add pnpm && pnpm i --frozen-lockfile; \
+    else \
+        echo "Lockfile not found." && exit 1; \
     fi
 
 
 # Rebuild the source code only when needed
-FROM node:16-alpine AS builder
+FROM node:${NODE_TAG} AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
@@ -38,7 +46,7 @@ RUN yarn build
 # RUN npm run build
 
 # Production image, copy all the files and run next
-FROM node:16-alpine AS runner
+FROM node:${NODE_TAG} AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
