--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,10 @@ services:
         - GOLANG_RELEASE=1.20
         - DEBIAN_RELEASE=bullseye
     container_name: JobMonBackend
+    environment:
+      - CONFIG=/app/config.json
+      - LOGLEVEL=3
+      - LISTEN_ADDR=:8080
     volumes:
       # Configuration config.json needs to be writable to allow backend to add new metrics
       - type: bind
