--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
 
   # See: ./frontend/Dockerfile
-  frontend:
+  jobmon_frontend:
     restart: always
     build:
       context: ./frontend
@@ -10,15 +10,15 @@ services:
         - NODE_TAG=16-alpine
         - NEXT_PUBLIC_BACKEND_URL=${BACKEND_URL}
         - NEXT_PUBLIC_BACKEND_WS=${BACKEND_WS}
-    container_name: JobMonFrontend
+    container_name: jobmon_frontend
     environment:
       - NEXT_PUBLIC_BACKEND_URL=${BACKEND_URL}
       - NEXT_PUBLIC_BACKEND_WS=${BACKEND_WS}
     depends_on:
-      - backend
+      - jobmon_backend
 
   # See: ./backend/Dockerfile
-  backend:
+  jobmon_backend:
     restart: always
     build:
       context: ./backend
@@ -26,7 +26,7 @@ services:
         # Image based on golang:1.20-bullseye
         - GOLANG_RELEASE=1.20
         - DEBIAN_RELEASE=bullseye
-    container_name: JobMonBackend
+    container_name: jobmon_backend
     environment:
       - CONFIG=/app/config.json
       - LOGLEVEL=3
@@ -37,15 +37,15 @@ services:
         source: ./backend/config.json
         target: /app/config.json
     depends_on:
-      - influxdb
-      - postgres
+      - jobmon_influxdb
+      - jobmon_postgres
 
   # DockerHub Page: https://hub.docker.com/_/influxdb
   # GitHub Repository: https://github.com/influxdata/influxdata-docker/
-  influxdb:
+  jobmon_influxdb:
     restart: always
     image: influxdb
-    container_name: JobMonInfluxDB
+    container_name: jobmon_influxdb
     environment:
       DOCKER_INFLUXDB_INIT_MODE: setup
       DOCKER_INFLUXDB_INIT_USERNAME: ${INFLUXDB_USER}
@@ -61,10 +61,10 @@ services:
 
   # DockerHub Page: https://hub.docker.com/_/postgres
   # GitHub Repository: https://github.com/docker-library/postgres
-  postgres:
+  jobmon_postgres:
     restart: always
     image: postgres
-    container_name: JobMonPostgres
+    container_name: jobmon_postgres
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
@@ -79,11 +79,11 @@ services:
   # GitHub Repository: https://github.com/nginxinc/docker-nginx
   # Dockerfile for tag latest:
   #   https://github.com/nginxinc/docker-nginx/blob/master/mainline/debian/Dockerfile
-  nginx:
+  jobmon_nginx:
     restart: always
     env_file: .env
     image: nginx
-    container_name: JobMonNginx
+    container_name: jobmon_nginx
     secrets:
       - source: nginxFullchain
         target: /etc/nginx/certs.d/fullchain.pem
@@ -109,7 +109,7 @@ services:
       - ${NGINX_HTTP_PORT}:80
       - ${NGINX_HTTPS_PORT}:443
     depends_on:
-      - frontend
+      - jobmon_frontend
 
 configs:
   nginxDefaultConfig:
