--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -13,11 +13,11 @@ server {
 }
 
 upstream frontendServer {
-    server frontend:3000;
+    server jobmon_frontend:3000;
 }
 
 upstream backendServer {
-    server backend:8080;
+    server jobmon_backend:8080;
 }
 
 map $http_upgrade $connection_upgrade {
