The password strings in the .env file have been replaced with new strings that do not look like valid passwords to indicate that they need to be replaced. Added a lot more comments.

--- a/.env
+++ b/.env
@@ -1,22 +1,47 @@
 # Docker compose environment file
 
+###
 # InfluxDB config
-INFLUXDB_USER=admin
-INFLUXDB_PASSWORD=p0bVVDg6XmdscnmrPHzecOIvEuuV1eOl
-INFLUXDB_ADMIN_TOKEN=LwgFmAmO8hWQVzpXyFjCezADhQ5nBWuU
-INFLUXDB_ORG=scs
-INFLUXDB_BUCKET=jobmon
-INFLUXDB_PORT=8086
+###
 
+# Username for InfluxDB super-user
+INFLUXDB_USER=admin
+# Password for InfluxDB super-user
+INFLUXDB_PASSWORD="<influxdb_password>"
+# Authentication token to associate with the super-user
+INFLUXDB_ADMIN_TOKEN="<influxdb_admin_token>"
+# Organization name
+INFLUXDB_ORG=scs
+# Bucket name
+INFLUXDB_BUCKET=hk-jobmon
+# Port that will be exposed (e.g. 8086 for InfluxDB default port)
+INFLUXDB_PORT=9200
+
+###
 # Backend config
+###
+
+# Public URL to access the the backend from the clients webbrowser
 BACKEND_URL=https://my-monitor-db.example.org
+# Public websocket URL to access the backend from the clients webbrowser
 BACKEND_WS=wss://my-monitor-db.example.org
 
+###
 # PostgreSQL config
-POSTGRES_PASSWORD=LzeEbp5KyihKXC7a66UQLVVw
+###
+
+# superuser password for PostgreSQL
+POSTGRES_PASSWORD="<psql_password>"
+# default database
 POSTGRES_DB=jobmon
+# Port that will be exposed (e.g. 5432 for postgresql default port)
 POSTGRES_PORT=5432
 
+###
 # NGINX config
+###
+
+# HTTP port that will be exposed (e.g. 80 for http default port)
 NGINX_HTTP_PORT=80
+# HTTPS port that will be exposed (e.g. 443 for https default port)
 NGINX_HTTPS_PORT=443
