Use more generic descriptive names

--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ INFLUXDB_PASSWORD="<influxdb_password>"
 # Authentication token to associate with the super-user
 INFLUXDB_ADMIN_TOKEN="<influxdb_admin_token>"
 # Organization name
-INFLUXDB_ORG=scs
+INFLUXDB_ORG="myOrg"
 # Bucket name
-INFLUXDB_BUCKET=hk-jobmon
+INFLUXDB_BUCKET="myBucket"
 # Port that will be exposed (e.g. 8086 for InfluxDB default port)
 INFLUXDB_PORT=9200
 
