--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       jobmon_influxdb:
         condition: service_healthy
       jobmon_postgres:
-        condition: service_started
+        condition: service_healthy
 
   # DockerHub Page: https://hub.docker.com/_/influxdb
   # GitHub Repository: https://github.com/influxdata/influxdata-docker/
@@ -74,12 +74,12 @@ services:
       # /etc/influxdb2/config.yml
       - ./influxdb/config:/etc/influxdb2
     healthcheck:
-      test: "curl --fail http://localhost:8086/ping"
+      test: "curl --fail http://jobmon_influxdb:8086/ping"
       # time between the health checks
       interval: 10s
       # time that the health check waits for a response
-      timeout: 30s
-      # number of consecutive health check failures required to declare the container status as unhealthy.
+      timeout: 5s
+      # number of consecutive health check failures required to declare the container status as unhealthy
       retries: 5
 
   # DockerHub Page: https://hub.docker.com/_/postgres
@@ -100,6 +100,15 @@ services:
       - type: bind
         source: ./postgres/data
         target: /var/lib/postgresql/data
+    healthcheck:
+      # See: https://www.postgresql.org/docs/current/app-pg-isready.html
+      test: "pg_isready --host jobmon_postgres --port=5432"
+      # time between the health checks
+      interval: 10s
+      # time that the health check waits for a response
+      timeout: 5s
+      # number of consecutive health check failures required to declare the container status as unhealthy
+      retries: 5
 
   # DockerHub Page: https://hub.docker.com/_/nginx
   # GitHub Repository: https://github.com/nginxinc/docker-nginx
@@ -136,6 +145,7 @@ services:
       - ${NGINX_HTTPS_PORT}:443
     depends_on:
       - jobmon_frontend
+      - jobmon_backend
 
 configs:
   nginxDefaultConfig:
