Create golang development environment with docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,13 +7,43 @@
 ARG DEBIAN_RELEASE=bullseye \
     GOLANG_RELEASE=1.20
 
-FROM golang:${GOLANG_RELEASE}-${DEBIAN_RELEASE} AS builder
+
+###
+# Go module dependencies
+###
+FROM golang:${GOLANG_RELEASE}-${DEBIAN_RELEASE} AS deps
 
 WORKDIR /app
 
 # Download required go modules
 COPY go.mod go.sum ./
 RUN go mod download && go mod verify
+
+###
+# Development environment
+###
+FROM deps AS dev_env
+
+WORKDIR /app
+
+# Install CA certificates to verify certificate of OpenID providers
+RUN apt-get update \
+    && apt-get install -y ca-certificates \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# Default environment settigs
+ENV CONFIG="/app/config.json" \
+    LOGLEVEL=3 \
+    LISTEN_ADDR=":8080"
+
+CMD [ "/bin/bash", "-c", "exec go run . --config=\"${CONFIG}\" --log=\"${LOGLEVEL}\" --listen-addr=\"${LISTEN_ADDR}\"" ]
+
+###
+# Builder
+###
+FROM deps AS builder
+WORKDIR /app
 
 # Add source code to the image
 ADD analysis ./analysis
