--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
 
-  # See: ./frontend/Dockerfile
   jobmon_frontend:
     restart: always
     build:
       context: ./frontend
+      dockerfile: Dockerfile
       args:
         # Image based on node:16-alpine
         NODE_TAG: 16-alpine
@@ -21,11 +21,11 @@ services:
     depends_on:
       - jobmon_backend
 
-  # See: ./backend/Dockerfile
   jobmon_backend:
     restart: always
     build:
       context: ./backend
+      dockerfile: Dockerfile
       args:
         # Image based on golang:1.20-bullseye
         GOLANG_RELEASE: "1.20"
