--- a/backend/Dockerfile.development
+++ b/backend/Dockerfile.development
@@ -4,10 +4,12 @@
 # * [GitHub Repository](https://github.com/docker-library/golang/)
 # * [Release History](https://go.dev/doc/devel/release)
 ###
-ARG DEBIAN_RELEASE=bullseye \
-    GOLANG_RELEASE=1.20
+ARG GOLANG_RELEASE=1.20 \
+    DEBIAN_RELEASE=bullseye \
+    GOLANG_TAG=${GOLANG_RELEASE}-${DEBIAN_RELEASE} \
+    DEBIAN_TAG=${DEBIAN_RELEASE}
 
-FROM golang:${GOLANG_RELEASE}-${DEBIAN_RELEASE}
+FROM golang:${GOLANG_TAG}
 
 WORKDIR /app
 
