--- a/frontend/Dockerfile.development
+++ b/frontend/Dockerfile.development
@@ -1,12 +1,13 @@
 # Node.js Docker Image
 # * [DockerHub Page](https://hub.docker.com/_/node)
-ARG NODE_TAG=16-alpine
+ARG NODE_RELEASE=16 \
+    DEBIAN_RELEASE=bullseye \
+    NODE_TAG=${NODE_RELEASE}-${DEBIAN_RELEASE}
 
 # Taken from https://nextjs.org/docs/deployment
 # Install dependencies only when needed
 FROM node:${NODE_TAG} AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
+
 WORKDIR /app
 
 ENV NODE_ENV development
