--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -7,7 +7,8 @@ services:
       dockerfile: Dockerfile.development
       args:
         # Image based on node:16-alpine
-        NODE_TAG: 16-alpine
+        NODE_RELEASE: "16"
+        DEBIAN_RELEASE: bullseye
         # Public URL to access the the backend from the clients webbrowser
         # e.g. https://my-monitor-db.example.org
         NEXT_PUBLIC_BACKEND_URL: ${BACKEND_URL}
