--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -19,6 +19,14 @@ services:
     environment:
       NEXT_PUBLIC_BACKEND_URL: ${BACKEND_URL}
       NEXT_PUBLIC_BACKEND_WS: ${BACKEND_WS}
+    healthcheck:
+      test: "curl --fail http://jobmon_frontend:3000"
+      # time between the health checks
+      interval: 10s
+      # time that the health check waits for a response
+      timeout: 5s
+      # number of consecutive health check failures required to declare the container status as unhealthy
+      retries: 5
     volumes:
       # Frontend source code
       - type: bind
