--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -30,6 +30,9 @@ server {
     listen [::]:443 ssl http2 default_server;
     server_name localhost my-monitor-db.example.org;
 
+    # Use docker compose internal DNS server
+    resolver 127.0.0.11;
+
     location / {
         proxy_pass http://frontendServer;
         proxy_http_version 1.1;
