--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -38,6 +38,13 @@ server {
         proxy_http_version 1.1;
     }
 
+    location /_next/webpack-hmr {
+        proxy_pass http://frontendServer/_next/webpack-hmr;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
+
     location ~ ^/(api|auth)/ {
         proxy_pass http://backendServer;
         proxy_http_version 1.1;
