Fix Dockerfile to include notify package

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -34,6 +34,7 @@ ADD store ./store
 ADD test ./test
 ADD utils ./utils
 ADD router ./router
+ADD notify ./notify
 COPY jobmon.go ./
 
 # Default build environment settigs
