--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -58,6 +58,14 @@ services:
       CONFIG: /app/config.json
       LOGLEVEL: "3"
       LISTEN_ADDR: :8080
+    healthcheck:
+      test: "curl --fail http://jobmon_backend:8080/api/ping"
+      # time between the health checks
+      interval: 10s
+      # time that the health check waits for a response
+      timeout: 5s
+      # number of consecutive health check failures required to declare the container status as unhealthy
+      retries: 5
     volumes:
       # Backend source code
       - type: bind
