--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,14 @@ services:
       - type: bind
         source: ./backend/config.json
         target: /app/config.json
+    healthcheck:
+      test: "curl --fail http://jobmon_backend:8080/api/ping"
+      # time between the health checks
+      interval: 10s
+      # time that the health check waits for a response
+      timeout: 5s
+      # number of consecutive health check failures required to declare the container status as unhealthy
+      retries: 5
     depends_on:
       jobmon_influxdb:
         condition: service_healthy
