--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
@@ -27,9 +28,11 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "16.11.12",
     "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -41,6 +44,8 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "*"
   }
 }
