--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,11 +32,14 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@swc/jest": "^0.2.26",
     "@types/jest": "^29.5.0",
     "@types/node": "16.11.12",
     "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "esbuild": "^0.17.17",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "12.0.7",
     "eslint-config-standard-with-typescript": "^33.0.0",
