Curl is required for docker health check, so add it to the container image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -64,7 +64,7 @@ WORKDIR /app
 
 # Install CA certificates to verify certificate of OpenID providers
 RUN apt-get update \
-    && apt-get install -y ca-certificates \
+    && apt-get install -y ca-certificates curl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
