--- a/backend/Dockerfile.development
+++ b/backend/Dockerfile.development
@@ -18,7 +18,7 @@ RUN go install honnef.co/go/tools/cmd/staticcheck@latest
 
 # Install CA certificates to verify certificate of OpenID providers
 RUN apt-get update \
-    && apt-get install -y ca-certificates \
+    && apt-get install -y ca-certificates curl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
