--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,11 +24,11 @@ test-backend:
   stage: test
   script:
     - docker compose --file docker-compose.test.yml build --pull jobmon_backend_tests
-    - docker-compose -f docker-compose.test.yml run --rm jobmon_backend_tests
+    - docker compose --file docker-compose.test.yml run --rm jobmon_backend_tests
 
 test-frontend:
   stage: test
   script:
     - docker compose --file docker-compose.test.yml build --pull jobmon_frontend_tests
-    - docker-compose -f docker-compose.test.yml run --rm jobmon_frontend_tests
+    - docker compose --file docker-compose.test.yml run --rm jobmon_frontend_tests
    
