--- a/backend/Dockerfile.test
+++ b/backend/Dockerfile.test
@@ -1,3 +1,5 @@
+# This dockerfile runs the unit-tests for the backend
+
 ###
 # Create golang build image
 # * [DockerHub Page](https://hub.docker.com/_/golang)
