--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,4 +31,11 @@ test-frontend:
   script:
     - docker compose --file docker-compose.test.yml build --pull jobmon_frontend_tests
     - docker compose --file docker-compose.test.yml run --rm jobmon_frontend_tests
+
+test-frontend-node-modules:
+  stage: test
+  image: node:lts
+  script:
+    - cd frontend/
+    - yarn audit
    
