--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/d3": "^7.1.0",
     "@types/humanize-duration": "^3.27.1",
     "base64url": "^3.0.1",
@@ -33,6 +35,8 @@
   },
   "devDependencies": {
     "@swc/jest": "^0.2.26",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.0",
     "@types/node": "16.11.12",
     "@types/react": "^18.0.0",
@@ -48,7 +52,13 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.1",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "msw": "^1.2.1",
+    "react-hooks": "^1.0.1",
     "ts-jest": "^29.1.0",
     "typescript": "*"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
