--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,8 @@
     "msw": "^1.2.1",
     "react-hooks": "^1.0.1",
     "ts-jest": "^29.1.0",
-    "typescript": "*"
+    "typescript": "*",
+    "whatwg-fetch": "^3.6.2"
   },
   "msw": {
     "workerDirectory": "public"
